added search by query on name entity on the controller

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,10 +1,10 @@
 ##############################Spring
 spring:
 
-  h2:
-    console:
-      enabled: true
-      path: /javamyadmin
+#  h2:
+#    console:
+#      enabled: true
+#      path: /javamyadmin
 
   jpa:
     database: POSTGRESQL
